# prb_test

./: .gitignore  README.md  download_chromosomes.py  latest.error  pyproject.toml  split_fasta.ipynb  split_fasta.py  test.ipynb
prb_test/: main_test.py
